Update: Font-size change for smaller screen and fixed overflow on certain screen size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,7 +232,7 @@ ul.sidebar-link li {
   color: rgb(110, 255, 129);
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and ((max-width: 1000px) or (max-width: 1200px)) {
   
   .container {
     flex-direction: column;
@@ -268,6 +268,6 @@ ul.sidebar-link li {
 
 @media screen and (max-width: 600px) {
   .post-content {
-    word-break: break-all;
+    font-size: smaller;
   }
 }
